correct font-size

--- a/index.html
+++ b/index.html
@@ -11,17 +11,17 @@
 <body>
     <div class="wrapper">
         <button class="btn show-btn" id="show-btn">
-            show-btn
+            Show info
         </button>
         <div class="modal hidden" id="modal">
             <div class="modal-header">
-                <h3>i love bmw </h3>
+                <h3>i love bmw 💙</h3>
                 <button class="btn close-btn" id="close-btn">
                     <i class="fa-solid fa-xmark"></i>
                 </button>
             </div>
             <div class="modal-body">
-                <h1>BMW info</h1>
+                <h1>BMW info </h1>
                 <p>
                     Lorem ipsum dolor, sit amet consectetur adipisicing elit. Atque, quidem! Soluta in, accusamus libero quae reiciendis omnis minima necessitatibus excepturi amet! Dolore, molestiae expedita. Veritatis labore blanditiis explicabo animi quaerat ex? Ipsam ex cumque temporibus vel ea incidunt repellendus numquam, excepturi non vitae hic consectetur!
                  </p>
